fix: aggiungi gitflow extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,7 @@
     "tht13.html-preview-vscode"
     "mikemcbride.electron-highlighter"
     "waderyan.nodejs-extension-pack"
-	"gamunu.vscode-yarn"
+    "gamunu.vscode-yarn"
+    "vector-of-bool.gitflow"
   ]
 }
