--- a/training-app/package.json
+++ b/training-app/package.json
@@ -10,6 +10,11 @@
     "chart.js": "^2.9.3",
     "electron": "^8.2.3",
     "jquery": "^3.5.0",
-    "popper.js": "^1.16.1"
+    "papaparse": "^5.2.0",
+    "popper.js": "^1.16.1",
+    "sweetalert2": "^9.10.12"
+  },
+  "scripts": {
+    "start": "electron ."
   }
 }
