--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^2.0.5",
-    "regression": "^2.0.1"
+    "prettier": "^2.0.5"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.3"
