--- a/training-app/package.json
+++ b/training-app/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.9.3",
     "electron": "^8.2.3",
     "fs": "^0.0.1-security",
+    "jest": "^26.0.1",
     "jquery": "^3.5.0",
     "papaparse": "^5.2.0",
     "path": "^0.12.7",
@@ -17,6 +18,7 @@
     "sweetalert2": "^9.13.1"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "test": "jest"
   }
 }
